Update JavaRegexEx.java